Edited body styling to prevent overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 body {
     min-height: 100vh;
     background: linear-gradient(#10141e, #2b284b);
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin: 0px;
+    padding: 0px;
 }
 
 @font-face {
